--- a/index.html
+++ b/index.html
@@ -3,17 +3,23 @@
 <head>
   <link type="text/css" rel="stylesheet" href="stylesheet.css" />
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-  <script type="text/javascript"
-  src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
   <script src="myscript.js"></script>
   <title> Notepad for sketching</title>
 </head>
 
 <body>
   <div id="container"></div>
-
-<br><br>
-<button id = 'newGrid'> Create new grid </button>
+  <br><br>
+  <button id='newGrid'> Create new grid </button>
+  <div class='color_boxes' id='black'> </div>
+  <div class='color_boxes' id='grey'> </div>
+  <div class='color_boxes' id='purple'> </div>
+  <div class='color_boxes' id='indigo'> </div>
+  <div class='color_boxes' id='blue'> </div>
+  <div class='color_boxes' id='green'> </div>
+  <div class='color_boxes' id='yellow'> </div>
+  <div class='color_boxes' id='orange'> </div>
+  <div class='color_boxes' id='red'> </div>
 </body>
 
 </html>
