--- a/index.html
+++ b/index.html
@@ -11,15 +11,18 @@
   <div id="container"></div>
   <br><br>
   <button id='newGrid'> Create new grid </button>
-  <div class='color_boxes' id='black'> </div>
-  <div class='color_boxes' id='grey'> </div>
-  <div class='color_boxes' id='purple'> </div>
-  <div class='color_boxes' id='indigo'> </div>
-  <div class='color_boxes' id='blue'> </div>
-  <div class='color_boxes' id='green'> </div>
-  <div class='color_boxes' id='yellow'> </div>
-  <div class='color_boxes' id='orange'> </div>
-  <div class='color_boxes' id='red'> </div>
+  <div>
+    <div class='colorBoxes' id='currentColor'> </div>
+    <div class='colorBoxes' id='black'> </div>
+    <div class='colorBoxes' id='grey'> </div>
+    <div class='colorBoxes' id='purple'> </div>
+    <div class='colorBoxes' id='indigo'> </div>
+    <div class='colorBoxes' id='blue'> </div>
+    <div class='colorBoxes' id='green'> </div>
+    <div class='colorBoxes' id='yellow'> </div>
+    <div class='colorBoxes' id='orange'> </div>
+    <div class='colorBoxes' id='red'> </div>
+  </div>
 </body>
 
 </html>
