--- a/index.html
+++ b/index.html
@@ -4,25 +4,23 @@
   <link type="text/css" rel="stylesheet" href="stylesheet.css" />
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
   <script src="myscript.js"></script>
-  <title> Notepad for sketching</title>
+  <title> Drawing copybook</title>
 </head>
 
 <body>
   <div id="container"></div>
   <br><br>
   <button id='newGrid'> Create new grid </button>
-  <div>
-    <div class='colorBoxes' id='currentColor'> </div>
-    <div class='colorBoxes' id='black'> </div>
-    <div class='colorBoxes' id='grey'> </div>
-    <div class='colorBoxes' id='purple'> </div>
-    <div class='colorBoxes' id='indigo'> </div>
-    <div class='colorBoxes' id='blue'> </div>
-    <div class='colorBoxes' id='green'> </div>
-    <div class='colorBoxes' id='yellow'> </div>
-    <div class='colorBoxes' id='orange'> </div>
-    <div class='colorBoxes' id='red'> </div>
-  </div>
+  <div class='colorBoxes' id='currentColor'> </div>
+  <div class='colorBoxes' id='black'> </div>
+  <div class='colorBoxes' id='grey'> </div>
+  <div class='colorBoxes' id='purple'> </div>
+  <div class='colorBoxes' id='indigo'> </div>
+  <div class='colorBoxes' id='blue'> </div>
+  <div class='colorBoxes' id='green'> </div>
+  <div class='colorBoxes' id='yellow'> </div>
+  <div class='colorBoxes' id='orange'> </div>
+  <div class='colorBoxes' id='red'> </div>
 </body>
 
 </html>
