--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
+  <meta charset="utf-8">
   <link type="text/css" rel="stylesheet" href="stylesheet.css" />
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
   <script src="myscript.js"></script>
